@@ -1,3 +1,6 @@
+16 February 2012: Matthijs
+	- Fallback to AXFR if IXFR is misinterpreted.
+
 23 January 2012: Wouter
 	- remove clang warning from region_log_stats().
 
